name:                pmonadtrans
version:             0.1.0.0
synopsis:            Parameterized Monad Transformers
-- description:         
license:             MIT
license-file:        LICENSE
author:              Josef Svenningsson
maintainer:          josef.svenningsson@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Type.Pair
                       Control.Monad.Param.State
                       Control.Monad.Param.State.Class
                       Control.Monad.Param.Writer
                       Control.Monad.Param.Writer.Class
                       Control.Monad.Param.Trans
                       Control.Monad.Param
                       Control.Monad.Param.Id
                       Control.Monad.Param.Do
                       Control.Monad.Param.Cont
--                       Control.Monad.Param.BackwardsState
                       Control.Monad.Param.Update
                       Control.Monad.Param.P
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && < 4.10, transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010
